public/stylesheets/all.css
/* ... */
.popup-text, 
#group_permission_text{
    padding-top: 5px;
    color: white;
    text-align: left;
    font: 16px/16px Arial, Helvetica, sans-serif;
}

popup-fields-holder,
#group_permission_text_field_holder{
    width:90%;
    margin: 0px 0px 0 10px;
}
#group_permission_text_field{
    width:100%;
    height:35px;
}
#group_permission_error{
    color: #FFC233;
    font: bold 14px/14px Arial, Helvetica, sans-serif;
    padding: 10px 0 0 10px;
    text-align: center;
    cursor: pointer;
}
#group_permission_applied{
    color: #BF1F1E;
    font: bold 20px/20px Arial, Helvetica, sans-serif;
    padding: 20px 0 0 10px;
}
#add_group_button{
    padding: 10px 20px 0 0;
    float:right;
    color:#FFC233;
    font: bold 14px/14px Arial, Helvetica, sans-serif;
    cursor: pointer;
}

#edit_group_name{
    background: transparent;
    color: #FFC233;
    width: 265px;
    margin: 10px 0 0 10px;
    height: 60px;
    overflow:hidden;
    font: bold 24px/24px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_description{
    background: transparent;
    color: white;
    width: 360px;
/*    height: 20px;*/
    margin: 0;
    font: bold 14px/14px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_contact_name{
    background: transparent;
    color: #FFC233;
    width: 220px;
    /*height: 20px;*/
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_contact_email{
    background: transparent;
    color: #FFC233;
    width: 220px;
/*    height: 20px;*/
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_contact_address{
    background: transparent;
    color: #FFC233;
    width: 200px;
/*    height: 20px;*/
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_contact_phone{
    background: transparent;
    color: #FFC233;
    width: 235px;
    height: 20px;
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_join_code{
    background: transparent;
    color: #FFC233;
    width: 175px;
/*    height: 20px;*/
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}


.content-left-holder .clh-content {
    padding: 20px;
}

.content-left-holder .clh-content h3 {
    font-size: 22px;
    color: #FFC233;
    text-shadow: #4f4f4d 3px 3px 3px;
}

.group-settings-content {    
    /*padding: 10px;*/
    max-width: 1050px;
    margin: 0 auto;
}

.group-settings-content h3 {
    color: #FFC233;
    text-shadow: #4f4f4d 3px 3px 3px;
    font-size: 1.5em;
}

#user_groups_list li {
    float: left;
    margin: 10px;
    text-align: center;
}

#user_groups_list li span {
    text-align: center;
    font: bold 12px/12px Arial, Helvetica, sans-serif;
    color: white;
    padding: 5px 0 0 5px;
}

.search-text-field {
    width:365px;
    height:24px;
    margin:10px;
    border: 2px solid #4F4F4D;
}

.clh-content label {
    float:left;
    padding-right: 5px;
    color:#FFFCD5;
    font: bold 16px/16px Arial, Helvetica, sans-serif;
}

#user_group_details label {
    clear: left;
}

.clh-content .hr {
    margin:10px 0;
    font-size:2px;
    background-color:#4F4F4D;
}

#new_user_group_holder input[type=text],
#user_group_holder input[type=text] {
    background: transparent;
    color: #FFC233;
    width: 200px;
    height: 20px;
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}

#user_group_holder span {
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    color: #FFC233;
}

#user_group_holder form {
    display: inline;
}

#user_group_holder img {
    cursor: pointer;
}

.user-group-item{
    padding: 15px 0;
    cursor: pointer;
}
.applied-user-group-item{
    background-color:#00952B;
    -webkit-box-shadow: 3px 3px 3px #4F4F4D;
    -moz-box-shadow: 3px 3px 3px #4f4f4d;
    box-shadow: 3px 3px 3px #4F4F4D;
    padding: 10px 0;
}

#group_public_switch{
    color: white;
    font: bold 16px/16px Arial, Helvetica, sans-serif;
}
#group_public_switch ul{
    display:none;
    color: #000;
    z-index:2;
    left: -5px;
    width: 80px;
    position:absolute;
    /*background: #d2e9f3;*/
    background: #FFFCD5;
    padding: 10px;
}
#group_public_switch:hover ul{
    display:block;
}
#group_public_switch ul li{
    font: normal 14px/14px Arial, Helvetica, sans-serif;
    text-shadow: 0 0;
}
#group_public_switch .selected{
    font-weight: bold;
}
#group_public_switch ul li:hover{
    text-decoration: underline;
}

h2 {
    font-size: 18px;
    margin-top: 5px;
    margin-bottom: 5px;
}

h1 {
    font-size: 22px;
    margin-top: 7px;
    margin-bottom: 7px;
}

